--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
